# HCL-Lab_mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.example.json
.claude/agents/: comware-driver-engineer.md  contract-architect.md  hcl-adapter-engineer.md  mcp-api-engineer.md  qa-release-engineer.md  security-reviewer.md  team-lead.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
config/: compatibility.yaml  config.example.json  config.example.yaml
docs/: HANDOVER.md  TEST_REPORT_v0.1.md  TOOL_ALIAS_PROPOSAL.md  agent-team-playbook.md  compatibility.md  configuration.md  design.md  release-process.md  security-model.md
docs/adr/: 0001-python-312-mcp-sdk.md  0002-stdio-local-only.md  0003-hcl-integration-boundary.md  0004-hexagonal-architecture.md  0005-read-only-plan-approval.md  0006-no-private-hcl-protocol.md  0007-version-gated-hcl-ui-automation.md
examples/: claude_desktop_config.json  cursor_mcp.json  vscode_mcp.json
scripts/: check_distribution.py  check_docs.py  check_repository.py
src/h3c_hcl_mcp/: __init__.py  __main__.py  version.py
src/h3c_hcl_mcp/adapters/: __init__.py
src/h3c_hcl_mcp/adapters/comware/: __init__.py  base.py  capabilities.py  console_telnet.py  netconf.py  prompt.py  session.py  session_manager.py  ssh.py
src/h3c_hcl_mcp/adapters/comware/parsers/: __init__.py  diagnostics.py  facts.py  interfaces.py
src/h3c_hcl_mcp/adapters/hcl/: __init__.py  log_observer.py  net_parser.py  official_api.py  project_repository.py  runtime_discovery.py
src/h3c_hcl_mcp/application/: __init__.py  runtime_service.py  topology_planner.py
src/h3c_hcl_mcp/domain/: __init__.py  audit.py  change.py  command.py  device.py  errors.py  project.py  result.py  topology_control.py
src/h3c_hcl_mcp/infrastructure/: __init__.py  locks.py  logging.py  secrets.py  settings.py
src/h3c_hcl_mcp/infrastructure/audit/: __init__.py  redact.py  schema.sql  store.py
src/h3c_hcl_mcp/infrastructure/policy/: __init__.py  approvals.py  command_rules.py  engine.py  roles.py
src/h3c_hcl_mcp/mcp/: __init__.py  audit_middleware.py  error_mapping.py  output_budget.py  sdk_compat.py  server.py  validation_middleware.py
src/h3c_hcl_mcp/mcp/tools/: __init__.py  audit.py  h3c_change.py  h3c_read.py  hcl_projects.py  hcl_runtime.py  health.py  jobs.py
src/h3c_hcl_mcp/ports/: __init__.py  approval_provider.py  audit_sink.py  command_parser.py  device_transport.py  hcl_control_provider.py  job_store.py  policy_engine.py  project_repository.py  runtime_discovery.py  secret_provider.py
tests/: conftest.py
tests/contract/: test_compatibility_matrix.py  test_domain_models.py  test_ports.py
tests/fixtures/device_outputs/: display_interface_brief.txt  display_ip_routing.txt  display_version_msr36.txt  display_version_s6850.txt
tests/fixtures/hcl_logs/: hcl_runtime_5103_active.txt  hcl_runtime_5103_rebound.txt
tests/fixtures/synthetic_projects/empty_lab/: non_hcl_file.txt
tests/fixtures/synthetic_projects/hcl_corrupt_001/: corrupt_net_lab.net  project.json
tests/fixtures/synthetic_projects/hcl_damaged_001/: project.json
tests/fixtures/synthetic_projects/hcl_mismatch_001/: project.json
tests/fixtures/synthetic_projects/hcl_real_5103/: project.json  real_lab_5103.net
tests/fixtures/synthetic_projects/hcl_sample_001/: project.json  sample_lab.net
tests/fixtures/synthetic_projects/hcl_sample_001/DeviceConfig/: MSR36_1.cfg  (+1 more)
tests/integration/: test_mcp_tools.py  test_mcp_validation_audit.py  test_stdio_client.py
tests/unit/: test_distribution_policy.py  test_docs_policy.py  test_h3c_read_tools.py  test_main.py  test_misc_tools.py  test_output_budget.py  test_repository_policy.py  test_sdk_compat.py
tests/unit/adapters/: test_comware_diagnostic_parsers.py  test_comware_parsers.py  test_comware_prompt.py  test_comware_telnet.py  test_hcl_log_observer.py  test_hcl_net_parser.py  test_hcl_project_repository.py  test_hcl_runtime_discovery.py
tests/unit/application/: test_runtime_service.py  test_topology_planner.py
tests/unit/infrastructure/: test_audit.py  test_command_rules.py  test_logging.py  test_policy_engine.py  test_redact.py  test_secrets.py  test_settings.py
